--- a/Views/layout.cshtml
+++ b/Views/layout.cshtml
@@ -2,19 +2,28 @@
     /* Global includes for the theme
     ***************************************************************/
 
-    SetMeta("charset", "utf-8");
-    SetMeta("X-UA-Compatible", "IE=edge,chrome=1");
     SetMeta("viewport", "width=device-width, initial-scale=1.0");
 
-    Style.Include("bootstrap.min.css").AtHead();
-    Style.Include("site-min.css");
+    SetMeta(httpEquiv: "X-UA-Compatible", content: "IE=edge,chrome=1");
+    Script.Require("jQuery").AtFoot();
+    Script.Require("Bootstrap").AtFoot();
+    Script.Include("theme.js").AtFoot();
+    Style.Include("//fonts.googleapis.com/css?family=Lobster&subset=latin");
+    Style.Require("Bootstrap");
+    Style.Include("site.min.css");
+    Style.Include("theme.min.css");
 
     /* Inserting some ad hoc shapes
     ***************************************************************/
 
-    // WorkContext.Layout.Header.Add(New.Branding(), "5"); // Site name and link to the home page
-    //WorkContext.Layout.Footer.Add(New.BadgeOfHonor(), "5"); // Powered by Orchard
+    WorkContext.Layout.Footer.Add(New.BadgeOfHonor(), "5"); // Powered by Orchard
     WorkContext.Layout.Footer.Add(New.User(), "10"); // Login and dashboard links
+
+    /* Last bit of code to prep the layout wrapper
+***************************************************************/
+
+    Model.Id = "layout-wrapper";
+    var tag = Tag(Model, "div"); // using Tag so the layout div gets the classes, id and other attributes added to the Model
 }
 
 <div class="container">
