--- a/Styles/Theme.less
+++ b/Styles/Theme.less
@@ -1,15 +1,15 @@
-﻿ html, body {
+﻿html, body {
     background: #000; background-image: url(../Content/bg.png); background-repeat:no-repeat; background-position: bottom center; background-attachment:fixed;
 }
-
 .content {
     width:960px;
-    height:0px;
+    height:644px;
+    margin-top: 10%;
     margin-right: auto;
     margin-left: auto;
 }
 .panel-group {
-    width:430px;
+    width:630px;
     z-index: 100;
     -webkit-backface-visibility: hidden;
     -webkit-transform: translateX(-100%) rotate(-90deg);
@@ -48,7 +48,18 @@
     transform-origin: right top;
 }
 .panel-group .panel img {
-    margin-left:400px;
-    margin-top:800px;
+    width: 396px;
+    height: 600px;
+    margin-left:598px;
+    margin-top:396px;
     position: absolute;
+}
+
+div#layout-navigation.group>div.zone.zone-navigation>article.widget-navigation.widget-menu-widget.widget {
+ /* position: relative; */
+/* min-height: 50px; */
+/* margin-bottom: 20px; */
+/* border: 1px solid transparent; */
+    background-color: transparent; 
+    border-color: transparent;
 }
