--- a/Styles/Theme.less
+++ b/Styles/Theme.less
@@ -4,7 +4,7 @@
 .content {
     width:960px;
     height:644px;
-    margin-top: 10%;
+    margin-top: 2%;
     margin-right: auto;
     margin-left: auto;
 }
@@ -22,7 +22,7 @@
     transform-origin: right top;
 }
 .panel-heading {
-    width: 430px;
+    width: 629px;
 }
 .panel-title {
     height:18px
@@ -50,17 +50,22 @@
 
 .panel-text {
 
+margin-top: -80px;
+width: 367px;
+height: 524px;
+margin-left: 118px;
+
 /* Safari */
--webkit-transform: rotate(-90deg);
+-webkit-transform: rotate(90deg);
 
 /* Firefox */
--moz-transform: rotate(-90deg);
+-moz-transform: rotate(90deg);
 
 /* IE */
--ms-transform: rotate(-90deg);
+-ms-transform: rotate(90deg);
 
 /* Opera */
--o-transform: rotate(-90deg);
+-o-transform: rotate(90deg);
 
 /* Internet Explorer */
 filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
@@ -71,7 +76,7 @@ filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
     width: 396px;
     height: 600px;
     margin-left:598px;
-    margin-top:396px;
+    margin-top:336px;
     position: absolute;
 }
 
@@ -82,4 +87,11 @@ div#layout-navigation.group>div.zone.zone-navigation>article.widget-navigation.w
 /* border: 1px solid transparent; */
     background-color: transparent; 
     border-color: transparent;
+}
+
+article.widget-HeaderLogo p{text-align:center;}
+article.widget-HeaderLogo img{padding-top: 2%;}
+
+#footer {
+padding-left: 128px;
 }
